[package]
name = "descdeps"
version = "0.1.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
failure = "0.1.5"
log = "0.4.8"
log4rs = "0.8.3"
prettytable-rs = "0.8.0"
rayon = "1.2.0"
reqwest = "0.9.20"
serde = "1.0.101"
serde_json = "1.0.40"
strum = "0.16.0"
strum_macros = "0.16.0"
