[package]
name = "descdeps"
version = "0.3.0"
authors = ["Celeo <celeodor@gmail.com>"]
edition = "2018"
description = "CLI utility to describe project dependencies"
repository = "https://github.com/Celeo/descdeps"
readme = "README.md"
keywords = ["describe", "dependencies"]
categories = ["command-line-utilities"]
license = "Apache-2.0 AND MIT"
exclude = [
    ".gitignore",
    ".circleci/config.yml",
    "Cargo.lock"
]

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
failure = "0.1.5"
log = "0.4.8"
log4rs = "0.8.3"
prettytable-rs = "0.8.0"
rayon = "1.2.0"
reqwest = "0.9.20"
serde = "1.0.101"
serde_json = "1.0.40"
strum = "0.16.0"
strum_macros = "0.16.0"

[dev-dependencies]
mockito = "0.21.0"
